--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,14 @@
     "outDir": "public/scripts",
     "target": "es2015",
     "module": "es2015",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "allowJs": true,
+    "declaration": true,
+    "declarationDir": "public/scripts/types"
   },
+  "include": [
+    "src/**/*"
+  ], 
   "files": [
     "src/index.ts"
   ]
